# rl-hft-fast-agent

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: linterAndTypeChecker.yml
agents/baseline/: features.py  train.py
src/env/: hft_env.py  hft_env_latency.py  hft_env_queue.py  stochastic_lob.py  synthetic_market.py
src/features/: microstructure.py
