[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-hft-fast-agent"
version = "0.1.0"
requires-python = "3.13.3"
dependencies = [
    "numpy>=1.26",
    "numba>=0.59",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "py-spy",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "jupyterlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
